--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,11 @@
-export(rebuildMatrix)
-export(computeSignaling)
-export(getGeneRate)
-export(computeResponse)
 export(computeCorrelation)
+export(computeResponse)
+export(computeSignaling)
 export(doInteraction)
+export(getGeneRate)
+export(getRebuildMatrix)
 export(getTresSignature)
+export(rebuildMatrix)
 
 import(Seurat)
 import(CelliD)
